dpkg (1.4.0) unstable; urgency=low (HIGH for new source format)
  * Corrected buffer overrun when dpkg-deb generates filename.  (Bug#4467.)
  * dpkg-shlibdeps works with DEBIAN/shlibs (thanks Heiko Schlittermann).
  * Added libm.so.5 to shlibs.default for i386/m68k.

  * Split binary package into two: dpkg and dpkg-dev.
  * dpkg-source(1) documents mode and ownership setting during extraction.

  * dpkg-scanpackages moved to /usr/bin.
  * Include /usr/bin/dpkg-deb, not dpkg-deb.dist; don't rename in scripts.
  * Copyright file changed slightly.
  * debian-changelog-mode uses magic key substitution strings.  (Bug#4419.)
  * Changed email address in control file to <ian@chiark.greenend.org.uk>.
  * Manuals and own Standards-Version: updated to 2.1.1.0.

 -- Ian Jackson <ian@chiark.greenend.org.uk>  Thu, 12 Sep 1996 01:13:33 +0100

--- a/Makefile.in
+++ b/Makefile.in
@@ -22,7 +22,7 @@ prefix = @prefix@
 exec_prefix = $(prefix)
 docdir = $(prefix)/doc
 devdocdir = $(docdir)/dpkg
-copyingfile = $(docdir)/copyright/dpkg
+copyingfile = $(docdir)/dpkg/copyright
 infodir = $(prefix)/info
 bindir = $(exec_prefix)/bin
 sbindir = $(exec_prefix)/sbin
