--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -19,7 +19,7 @@ srcdir = @srcdir@
 VPATH = @srcdir@
 
 prefix = @prefix@
-copyingfile = $(prefix)/doc/copyright/dpkg
+copyingfile = $(prefix)/doc/dpkg/copyright
 
 SRC =	ehandle.c mlib.c parse.c parsehelp.c fields.c dump.c nfmalloc.c \
 	varbuf.c database.c myopt.c vercmp.c compat.c lock.c dbmodify.c \
