--- a/scripts/Makefile.in
+++ b/scripts/Makefile.in
@@ -41,11 +41,12 @@ LSMAN = dpkg-source.$(man1)
 LSMANL=	dpkg-gencontrol dpkg-genchanges dpkg-buildpackage \
 	dpkg-distaddfile dpkg-parsechangelog dpkg-shlibdeps
 EXC =   dpkg-name dpkg-source dpkg-genchanges dpkg-gencontrol dpkg-shlibdeps \
-	dpkg-buildpackage dpkg-parsechangelog dpkg-distaddfile 822-date
+	dpkg-buildpackage dpkg-parsechangelog dpkg-distaddfile 822-date \
+	dpkg-scanpackages
 MAN8 =	update-rc.d start-stop-daemon update-alternatives install-info \
 	dpkg-scanpackages
 SBIN =	update-rc.d start-stop-daemon update-alternatives install-info \
-	dpkg-scanpackages dpkg-divert cleanup-info
+	dpkg-divert cleanup-info
 LIB =	controllib.pl
 ELISP =	debian-changelog-mode.el
 CHGLGS=	cl-debian
