--- a/configure.in
+++ b/configure.in
@@ -90,7 +90,7 @@ AC_ARG_WITH(olddeb,
 
 dnl gettext
 
-ALL_LINGUAS="en fr"
+ALL_LINGUAS="en fr es"
 AM_GNU_GETTEXT
 AC_LINK_FILES($nls_cv_header_libgt, $nls_cv_header_intl)
 AC_OUTPUT_COMMANDS([sed -e "/POTFILES =/r po/POTFILES" po/Makefile.in > po/Makefile])
