--- a/debian/control
+++ b/debian/control
@@ -24,9 +24,9 @@ Package: dpkg-dev
 Section: devel
 Priority: important
 Architecture: all
-Depends: perl
+Depends: perl5
 Recommends: cpio (>= 2.4.2-2), patch (>= 2.2-1), gcc, make
-Suggests: gnupg, developer-keyring
+Suggests: gnupg, debian-keyring
 Conflicts: dpkgname
 Replaces: dpkgname, dpkg (<< 1.4.0)
 Description: Package building tools for Debian Linux
