--- a/debian/control
+++ b/debian/control
@@ -8,8 +8,7 @@ Package: dpkg
 Architecture: any
 Essential: yes
 Pre-Depends: ${shlibs:Pre-Depends}
-Suggests: debian-keyring
-Description: Package maintenance system for Debian Linux
+Description: Package maintenance system for Debian
  This package contains the programs which handle the installation and
  removal of packages on your system.
  .
@@ -29,11 +28,9 @@ Recommends: cpio (>= 2.4.2-2), patch (>= 2.2-1), gcc, make
 Suggests: gnupg, debian-keyring
 Conflicts: dpkgname
 Replaces: dpkgname, dpkg (<< 1.4.0)
-Description: Package building tools for Debian Linux
+Description: Package building tools for Debian
  This package contains the tools (including dpkg-source) required to
- unpack, build and upload Debian source packages.  It also contains
- the programmers' and Debian policy manuals, which are the
- documentation for package developers.
+ unpack, build and upload Debian source packages.
  .
  `cpio' and `patch' are also required to manipulate source packages.
  Some older cpios are insufficient - use at least 2.4.2-2.
