--- a/debian/rules
+++ b/debian/rules
@@ -11,63 +11,40 @@ arch=$(shell dpkg --print-architecture)
 mcidir=debian/tmp-main/DEBIAN
 
 
-Makefile.in: Makefile.am
+maintainer-configure: Makefile.am configure.in
 	$(checkdir)
-	$(RM) config.status
 	mkdir -p automake
 	aclocal -I ./automake
 	autoheader
+	gettextize --copy --force
+	libtoolize --copy --force
+	patch -p0 < debian/ltconfig-1.3.2.diff
+	automake --copy --add-missing --foreign
 	autoconf
-	gettextize --force
-	libtoolize --automake --copy --force
-	$(RM) config.sub config.guess 
-	ln -s /usr/share/automake/config.sub .
-	automake --add-missing
 
-$(BUILD)/Makefile: Makefile.in
+$(BUILD)/config.status:
 	$(checkdir)
 	$(RM) -r debian/build
 	install -d debian/build
 	cd $(BUILD) && ../../configure \
-		--enable-shared --with-included-gettext \
+		--enable-shared \
 		--prefix=/usr \
 		--datadir=/usr/share \
+		--mandir=/usr/share/man \
 		--sysconfdir=/etc \
 		--sharedstatedir=/var/lib \
 		--localstatedir=/var/lib
-# libtool -rpath workaround based on a suggestion by Yann Dirson
-# <dirson@debian.org>
-#
-# It is supposed to be inserted in configure.in, but I didn't want
-# to re-run autoconf (since that bloats the Debian diff unnecessarily),
-# so I just patch libtool after running configure.  -- Richard Braakman
-# <dark@xs4all.nl>
-#
-# The version of libtool included with LessTif unfortunately insists on
-# linking with -rpath, i.e. hardwiring locations. This is not desirable.
-#
-# The dummy define is improbable enough not to conflict with anything; it is
-# just here to fool libtool by making it believe it gave some useful info to
-# gcc.
-	sed < $(BUILD)/libtool > $(BUILD)/libtool.foo \
-		's/^hardcode_libdir_flag_spec.*$$/hardcode_libdir_flag_spec=" -D__LIBTOOL_IS_A_FOOL__ "/'
-	mv $(BUILD)/libtool.foo $(BUILD)/libtool
-# More hackery: this will also patch the generated libtool to explicitly
-# link libraries against the libraries they depend on.  (particularly libc)
-	sed < $(BUILD)/libtool > $(BUILD)/libtool.foo '/^archive_cmds="/s/"$$/ \\$$deplibs"/'
-	mv $(BUILD)/libtool.foo $(BUILD)/libtool
-	chmod 755 $(BUILD)/libtool
 
-clean: $(BUILD)/Makefile
+clean:
 	$(checkdir)
-	$(MAKE) -C $(BUILD) -i maintainer-clean
+	-$(MAKE) -C $(BUILD) -i distclean
 	$(RM) -r debian/{build,files,substvars,tmp*}
 	$(RM) $(BUILD)/dpkg-*.tar.gz
 	$(RM) po/*.gmo
 	$(RM) config.log
 	find . \( -name '*~' -o -name '#*#' \) -print0 | xargs -r0 $(RM) --
 
-build: $(BUILD)/Makefile
+build: $(BUILD)/config.status
 	$(checkdir)
 	$(MAKE) -C $(BUILD)
 
@@ -77,7 +54,8 @@ binary-trees: build
 	$(checkdir)
 	-$(RM) -r debian/tmp-{main,dev}
 	install -d debian/tmp-{main,dev}/{DEBIAN,etc/dpkg,usr/doc/dpkg}
-	install -d debian/tmp-dev/usr/{lib/dpkg,doc/dpkg-dev,man/man1,man/man8,sbin,bin}
+	install -d debian/tmp-dev/usr/{lib/dpkg,doc/dpkg-dev,share/man/man1,share/man/man8,sbin,bin}
+	install -d debian/tmp-dev/usr/share/emacs/site-lisp/dpkg-dev
 	install -d debian/tmp-main/sbin
 	set -e; if [ $(arch) = i386 ]; then \
 		sed -e 's/^# i386elf: //' <debian/preinst >$(mcidir)/preinst ; \
@@ -90,28 +68,35 @@ binary-trees: build
 			debian/tmp-dev/etc/dpkg/shlibs.default ; \
 	fi
 	cp debian/{prerm,postinst} $(mcidir)/.
-	install -d debian/tmp-dev/etc/emacs/site-start.d
-	install -p -m 644 debian/50dpkg-dev.el \
-		debian/tmp-dev/etc/emacs/site-start.d/
-	install -d debian/tmp-dev/etc/xemacs/site-start-19.d
-	install -p -m 644 debian/50dpkg-dev.el \
-		debian/tmp-dev/etc/xemacs/site-start-19.d/
-	chmod +x $(mcidir)/{postinst,prerm,preinst}
 	$(MAKE) -C $(BUILD) top_distdir=. dist 
 	$(MAKE) -C $(BUILD) \
 		prefix=$(DIR)/debian/tmp-main/usr \
 		sysconfdir=$(DIR)/debian/tmp-main/etc \
 		datadir=$(DIR)/debian/tmp-main/usr/share \
+		mandir=$(DIR)/debian/tmp-main/usr/share/man \
 		sharedstatedir=$(DIR)/debian/tmp-main/var/lib \
 		localstatedir=$(DIR)/debian/tmp-main/var/lib \
 		install
-	find debian/tmp-main/usr/man -type f | xargs gzip -9vf
+	install -m 755 debian/dev-postinst debian/tmp-dev/DEBIAN/postinst
+	install -m 755 debian/dev-prerm debian/tmp-dev/DEBIAN/prerm
+	install -d debian/tmp-dev/etc/emacs/site-start.d
+	install -c debian/50dpkg-dev.el debian/tmp-dev/etc/emacs/site-start.d/.
+	install -d debian/tmp-dev/usr/lib/emacsen-common/packages/{install,remove}
+	install -m 755 debian/emacsen-common-remove \
+	debian/tmp-dev/usr/lib/emacsen-common/packages/remove/dpkg-dev
+	install -m 755 debian/emacsen-common-install \
+	debian/tmp-dev/usr/lib/emacsen-common/packages/install/dpkg-dev
+	cp scripts/debian-changelog-mode.el \
+	debian/tmp-dev/usr/share/emacs/site-lisp/dpkg-dev
+	rm -f debian/tmp-main/usr/share/{x,}emacs/site-lisp/debian-changelog-mode.el*
+	chmod +x $(mcidir)/{postinst,prerm,preinst}
+	find debian/tmp-main/usr/share/man -type f | xargs gzip -9vf
 	set -e; for f in dpkg-buildpackage dpkg-gencontrol dpkg-distaddfile \
 		  dpkg-parsechangelog dpkg-genchanges dpkg-shlibdeps; do \
-		rm debian/tmp-main/usr/man/man1/$$f.1; \
-		ln -s dpkg-source.1.gz debian/tmp-main/usr/man/man1/$$f.1.gz ; \
+		rm debian/tmp-main/usr/share/man/man1/$$f.1; \
+		ln -s dpkg-source.1.gz debian/tmp-main/usr/share/man/man1/$$f.1.gz ; \
 	done
-	ln -s ../man7/undocumented.7.gz debian/tmp-main/usr/man/man1/dpkg-divert.1.gz
+	ln -s ../man7/undocumented.7.gz debian/tmp-main/usr/share/man/man1/dpkg-divert.1.gz
 	gzip -9vf debian/tmp-main/usr/doc/dpkg/changelog*
 	cp debian/copyright debian/tmp-main/usr/doc/dpkg/copyright
 	cp debian/copyright debian/tmp-dev/usr/doc/dpkg-dev/copyright
@@ -119,10 +104,10 @@ binary-trees: build
 	set -e; for f in \
  usr/doc/dpkg/{internals.html,changelog.manuals.gz} \
  usr/bin/dpkg-{source,genchanges,gencontrol,shlibdeps,buildpackage,parsechangelog} \
- usr/bin/{dpkg-distaddfile,822-date,dpkg-scanpackages,dpkg-name} \
- usr/man/man1/dpkg-{source,genchanges,gencontrol,shlibdeps,buildpackage}.1.gz \
- usr/man/man1/{dpkg-parsechangelog,dpkg-distaddfile,822-date,dpkg-name}.1.gz \
- usr/man/man5 usr/man/man8/dpkg-scanpackages.8.gz \
+ usr/bin/{dpkg-distaddfile,822-date,dpkg-scanpackages,dpkg-name,dpkg-architecture} \
+ usr/share/man/man1/dpkg-{source,genchanges,gencontrol,shlibdeps,buildpackage,architecture}.1.gz \
+ usr/share/man/man1/{dpkg-parsechangelog,dpkg-distaddfile,822-date,dpkg-name}.1.gz \
+ usr/share/man/man5 usr/share/man/man8/dpkg-scanpackages.8.gz \
  usr/lib/dpkg/parsechangelog usr/lib/dpkg/controllib.pl \
 		; do mv debian/tmp-main/$$f debian/tmp-dev/$$f; done
 
