Updating to dpkg 1.4.1.7

--- a/configure.in
+++ b/configure.in
@@ -121,7 +121,7 @@ AC_C_BIGENDIAN
 AC_CHECK_SIZEOF(unsigned long)
 AC_CHECK_SIZEOF(unsigned int)
 AC_CHECK_FUNCS(unsetenv alphasort scandir strerror strsignal strtoul vsnprintf lchown)
-AC_CHECK_HEADERS(sys/cdefs.h)
+AC_CHECK_HEADERS(sys/cdefs.h sys/sysinfo.h)
 
 AC_CHECK_FUNC(sysinfo,
   AC_DEFINE(HAVE_SYSINFO),
