Updated to dpkg 1.4.1.8

--- a/configure.in
+++ b/configure.in
@@ -90,7 +90,7 @@ AC_ARG_WITH(olddeb,
 
 dnl gettext
 
-ALL_LINGUAS="en fr es"
+ALL_LINGUAS="en fr es ja_JP.ujis"
 AM_GNU_GETTEXT
 
 dnl Other stuff
@@ -207,5 +207,5 @@ cmp -s version.h.new version.h || mv version.h.new version.h
 
 AC_OUTPUT([Makefile intl/Makefile dpkg-deb/Makefile lib/Makefile
           include/Makefile dselect/Makefile split/Makefile methods/Makefile
-          md5sum/Makefile main/Makefile doc/Makefile scripts/Makefile
+          md5sum/Makefile main/Makefile doc/Makefile doc/ja/Makefile scripts/Makefile
           po/Makefile.in])
