--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Package: dpkg
 Architecture: any
 Essential: yes
 Pre-Depends: ${shlibs:Pre-Depends}
+Replaces: dpkg-doc-ja
 Description: Package maintenance system for Debian
  This package contains the programs which handle the installation and
  removal of packages on your system.
@@ -27,7 +28,7 @@ Depends: perl5
 Recommends: cpio (>= 2.4.2-2), patch (>= 2.2-1), gcc, make
 Suggests: gnupg, debian-keyring
 Conflicts: dpkgname
-Replaces: dpkgname, dpkg (<< 1.4.0)
+Replaces: dpkgname, dpkg (<< 1.4.0), dpkg-doc-ja
 Description: Package building tools for Debian
  This package contains the tools (including dpkg-source) required to
  unpack, build and upload Debian source packages.
