* check if we violate conflicts/depends/pre-depends of other packages when   processing an archive. * Preparation to move start-stop-daemon from scripts to utils

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,7 +9,7 @@ CPPSUBDIRS		=
 endif
 
 SUBDIRS			= po intl include lib main dpkg-deb split \
-			  md5sum scripts $(CPPSUBDIRS) doc
+			  md5sum scripts utils $(CPPSUBDIRS) doc
 
 ## Directory definitions
 
