dselect is its own package now

--- a/debian/control
+++ b/debian/control
@@ -38,3 +38,13 @@ Description: Package building tools for Debian
  .
  Most Debian source packages will require additional tools to build -
  for example, most packages need the `make' and the C compiler `gcc'.
+
+Package: dselect
+Architecture: any
+Priority: important
+Depends: ${shlibs:Depends}
+Replaces: dpkg (<< 1.4.1.15)
+Description: a user tool to manage Debian GNU/Linux packages
+ dselect is the primary user interface for installing, removing and
+ managing Debian GNU/Linux packages. It is an front-end to dpkg.
+
