Add an option to show the diff between old and new conffile

--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -91,6 +91,8 @@
 #define NOJOBCTRLSTOPENV    "DPKG_NO_TSTP"
 #define SHELLENV            "SHELL"
 #define DEFAULTSHELL        "sh"
+#define PAGERENV            "PAGER"
+#define DEFAULTPAGER        "pager"
 
 #define IMETHODMAXLEN        50
 #define IOPTIONMAXLEN        IMETHODMAXLEN
