* Add mipseb to the archtable too, since mips and mipseb are     both viable names for the mips big endian arch   * Update dpkg-architecure's archtable   * Removed the maintainer-configure portion in debian/rules, since     we should be shipping the source with all the auto* stuff     already generated anyway   * Removed the ltconfig patch, and resort to a debian/rules fix     to libtool itself after running configure, much cleaner, and     reversible since libtool is a generated file   * Use DESTDIR when installing instead of specifying all our     dest dirs seperately in the make line. Also fix some of the     make files to use DESTDIR when installing files   * Regenerated .po files and dpkg.pot. Also added update.sh to the po/     subdir for easier regenerating for cvs only   * Make release.sh generate .gmo files   * Removed shlibs.default.i386. This is an obsolete file. We also no     longer use /etc/dpkg/ directory.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -81,17 +81,18 @@ database-structure.monops: database-structure.ps
 	mv -f ps $@
 
 install-data-local: $(HTMLDOCSTAMPS)
-	$(mkinstalldirs) $(pkgdocdir)
-	$(INSTALL_DATA) $(top_srcdir)/debian/changelog $(pkgdocdir)/changelog
-	$(INSTALL_DATA) $(srcdir)/changelog $(pkgdocdir)/changelog.manuals
+	$(mkinstalldirs) $(DESTDIR)$(pkgdocdir)
+	$(INSTALL_DATA) $(top_srcdir)/debian/changelog $(DESTDIR)$(pkgdocdir)/changelog
+	$(INSTALL_DATA) $(srcdir)/changelog $(DESTDIR)$(pkgdocdir)/changelog.manuals
 	set -e; for f in $^; do \
 		g=`echo $$f | sed -e 's/-stamp$$//'`; \
-		cp -r $$g $(pkgdocdir)/`basename $$g`; \
+		cp -r $$g $(DESTDIR)$(pkgdocdir)/`basename $$g`; \
 	done
 
 uninstall-local:
-	-$(RM) $(pkgdocdir)/changelog.manuals $(pkgdocdir)/changelog
-	-cd $(pkgdocdir) && rm -rf $(HTMLDIRS)
+	-$(RM) $(DESTDIR)$(pkgdocdir)/changelog.manuals \
+		$(DESTDIR)$(pkgdocdir)/changelog
+	-cd $(DESTDIR)$(pkgdocdir) && rm -rf $(HTMLDIRS)
 
 dist-hook: $(HTMLDOCSTAMPS) $(HARDCOPY) internals.sgmls internals.texi internals.info
 	cp -p $^ $(distdir)
