--- a/debian/rules
+++ b/debian/rules
@@ -4,34 +4,18 @@ SHELL=bash
 
 .PHONY: clean build binary binary-trees binary-arch binary-indep
 
-BUILD := $(shell pwd)/debian/build
+BUILD := $(shell pwd)/build
 DIR := $(shell pwd)
 
 arch=$(shell dpkg --print-architecture)
 mcidir=debian/tmp-main/DEBIAN
 
 
-configure: Makefile.am configure.in
+$(BUILD)/config.status:
 	$(checkdir)
-	mkdir -p automake
-	aclocal -I ./automake
-	autoheader
-	gettextize --copy --force
-	libtoolize --copy --force
-	patch -p0 < debian/ltconfig-1.3.2.diff
-	automake --copy --add-missing --foreign
-	autoconf
-	cd utils ; \
-		aclocal -I ../automake ; \
-		autoheader ; \
-		automake --foreign ; \
-		autoconf
-
-$(BUILD)/config.status: configure
-	$(checkdir)
-	$(RM) -r debian/build
-	install -d debian/build
-	cd $(BUILD) && ../../configure \
+	$(RM) -r $(BUILD)
+	install -d $(BUILD)
+	cd $(BUILD) && $(DIR)/configure \
 		--enable-shared \
 		--prefix=/usr \
 		--datadir=/usr/share \
@@ -39,7 +23,12 @@ $(BUILD)/config.status: configure
 		--infodir=/usr/share/info \
 		--sysconfdir=/etc \
 		--sharedstatedir=/var/lib \
-		--localstatedir=/var/lib
+		--localstatedir=/var/lib && \
+	    sed < libtool > libtool-2 \
+	    -e 's/^hardcode_libdir_flag_spec.*$$/hardcode_libdir_flag_spec=" -D__NO_RPATH_PLEASE "/' \
+	    -e '/^archive_cmds="/s/"$$/ \\$$deplibs"/' && \
+	    mv -f libtool-2 libtool && \
+	    chmod 755 libtool
 
 clean:
 	$(checkdir)
@@ -59,7 +48,7 @@ binary: binary-arch binary-indep
 binary-trees: build
 	$(checkdir)
 	-$(RM) -r debian/tmp-{main,dev}
-	install -d debian/tmp-{main,dev}/{DEBIAN,etc/dpkg,usr/share/doc/dpkg}
+	install -d debian/tmp-{main,dev}/{DEBIAN,etc,usr/share/doc/dpkg}
 	install -d debian/tmp-dev/usr/{lib/dpkg,share/doc/dpkg-dev,sbin,bin}
 	install -d debian/tmp-dev/usr/share/man/{ja/man1,man1,ja/man8,man8}
 	install -d debian/tmp-dev/usr/share/emacs/site-lisp/dpkg-dev
@@ -68,11 +57,6 @@ binary-trees: build
 		sed -e 's/^# i386elf: //' <debian/preinst >$(mcidir)/preinst ; \
 	else \
 		sed -e '/^# i386elf: /d' debian/preinst >$(mcidir)/preinst ; \
-	fi
-	set -e; if [ -f debian/shlibs.default.$(arch) ]; then \
-		echo /etc/dpkg/shlibs.default >debian/tmp-dev/DEBIAN/conffiles ; \
-		cp debian/shlibs.default.$(arch) \
-			debian/tmp-dev/etc/dpkg/shlibs.default ; \
 	fi
 	cp debian/{prerm,postinst} $(mcidir)/.
 	$(MAKE) -C $(BUILD) top_distdir=. dist 
