* Fixed some compiler warnings   * Make start-stop-daemon exit(1) when we don't find one of the     pid's we are trying to kill, in accordance with the man page.   * When running --configure on an already installed package, just     say it's installed, and not that it is in an unconfigurable     state   * Bah, add all the prefix/datadir... stuff back to the install     target in debian/rules (po/ doesn't use it)   * Add function to libdpkg that dpkg can call to make sure it's     compiled version matches that of the library. If it fails,     complain loudly, but allow to proceed   * Make dpkg check for uid 0 requirement, before checking the path     since not being root, is probably the reason that the PATH is     borked in the first place   * Make -p short for --print-avail, and -P short for --purge   * Fix typo in md5sum(1) man page   * start-stop-daemon: Add --background and --make-pidfile options   * update-alternatives: make sure we remove "old" symlinks when they     are no longer pertinent. Add /etc/alternatives/README that refers     to the update-alternatives(8) man page.   * dpkg-divert: Add check for being able to write to the old/new     destination before doing a rename. We fail on this, without     changing the diversion registry   * Fix bad regex in update-rc.d

--- a/debian/rules
+++ b/debian/rules
@@ -62,7 +62,16 @@ binary-trees: build
 		debian/tmp-dev/etc/dpkg/shlibs.default ; \
 	fi
 	cp debian/{prerm,postinst} $(mcidir)/.
-	$(MAKE) -C $(BUILD) DESTDIR=$(DIR)/debian/tmp-main install
+	
+	$(MAKE) -C $(BUILD) install \
+		prefix=$(DIR)/debian/tmp-main/usr \
+		sysconfdir=$(DIR)/debian/tmp-main/etc \
+		sharedstatedir=$(DIR)/debian/tmp-main/var/lib \
+		localstatedir=$(DIR)/debian/tmp-main/var/lib \
+		datadir=$(DIR)/debian/tmp-main/usr/share \
+		mandir=$(DIR)/debian/tmp-main/usr/share/man \
+		infodir=$(DIR)/debian/tmp-main/usr/share/info
+	
 	install -m 755 debian/dev-postinst debian/tmp-dev/DEBIAN/postinst
 	install -m 755 debian/dev-prerm debian/tmp-dev/DEBIAN/prerm
 	install -d debian/tmp-dev/etc/emacs/site-start.d
