--- a/include/dpkg.h.in
+++ b/include/dpkg.h.in
@@ -202,5 +202,6 @@ extern volatile int onerr_abort;
 
 struct cmdinfo;
 void showcopyright(const struct cmdinfo*, const char*);
+char *libdpkgver(void);
 
 #endif /* DPKG_H */
